# aiomysql

./: .codecov.yml  .coveragerc  .flake8  .git_archival.txt  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.databases.json  .travis.yml  CHANGELOG  CHANGES.rst  CHANGES.txt  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  setup.cfg  setup.py
.docker/: init.sql  my.cnf
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci-cd.yml  ci.yml  codeql.yml  lint.yml
aiomysql/: __init__.py  _auth_native.py  _type.py  auth.py  connection.py  connections.py  cursors.py  log.py  pool.py  pools.py  prepared_statement.py  utils.py
aiomysql/pydal/: __init__.py  connection.py  cursor.py  dal.py  field.py  query.py  row.py  table.py
aiomysql/sa/: __init__.py  connection.py  engine.py  exc.py  result.py  transaction.py
aiomysql/tests/: _testutils.py  base.py  test_DictCursor.py  test_SSCursor.py  test_basic.py  test_connection.py  test_example.py  test_issues.py  test_nextset.py
docs/: Makefile  api.rst  conf.py  connection.rst  contributing.rst  cursors.rst  examples.rst  glossary.rst  index.rst  make.bat  pool.rst  sa.rst  tutorial.rst
examples/: demo.py  example.py  example_callproc.py  example_callproc_oldstyle.py  example_cursors.py  example_executemany.py  example_executemany_oldstyle.py  example_oldstyle.py  example_pool.py  example_pool_oldstyle.py  example_pydal.py  example_sa.py  example_simple_sa.py  example_simple_sa_oldstyle.py  example_ssl.py  example_transaction.py  example_transaction_oldstyle.py
tests/: __init__.py  _testutils.py  base.py  conftest.py  db_fixtures.py  test_DictCursor.py  test_SSCursor.py  test_async_iter.py  test_async_with.py  test_auth_native.py  test_auth_plugins.py  test_basic.py  test_bulk_inserts.py  test_connection.py  test_cursor.py  test_deserialize_cursor.py  test_dict_cursor.py  test_dictcursor.py  test_example.py  test_issues.py  test_load_local.py  test_nextset.py  test_pool.py  test_prepared_statement.py  test_sha_connection.py  test_sscursor.py  test_ssl.py  test_transaction_context_manager.py
tests/data/: gen.sh  tests_CA_cert.pem  tests_CA_key.pem  tests_client_cert.pem  tests_client_key.pem  tests_server_cert.pem  tests_server_key.pem
tests/fixtures/: my.cnf  my.cnf.tmpl  my.cnf.unix.tmpl
tests/pep492/: test_async_iter.py  test_async_with.py
tests/sa/: test_sa_compiled_cache.py  test_sa_connection.py  test_sa_default.py  test_sa_distil.py  test_sa_engine.py  test_sa_transaction.py  test_sa_types.py
tests/ssl_resources/: README.md  haproxy.cfg  socket.cnf  tls.cnf
tests/ssl_resources/ssl/: ca-key.pem  ca.pem  server-cert.pem  server-combined.pem  server-key.pem  server-req.pem
wheelhouse/: PyMySQL-0.9.2-py2.py3-none-any.whl  PyYAML-3.13-cp37-cp37m-linux_x86_64.whl  SQLAlchemy-1.2.16-cp37-cp37m-linux_x86_64.whl  aiomysql-0.0.20-py3-none-any.whl  aiopg-0.15.0-py3-none-any.whl  blessings-1.7-py3-none-any.whl  certifi-2018.11.29-py2.py3-none-any.whl  cffi-1.11.5-cp37-cp37m-manylinux1_x86_64.whl  cryptography-2.4.2-cp34-abi3-manylinux1_x86_64.whl  jmespath-0.9.3-py2.py3-none-any.whl  jsonschema-2.6.0-py2.py3-none-any.whl  psycopg2-2.7.6.1-cp37-cp37m-manylinux1_x86_64.whl  psycopg2_binary-2.7.6.1-cp37-cp37m-manylinux1_x86_64.whl  pycparser-2.19-py2.py3-none-any.whl  python_dateutil-2.7.5-py2.py3-none-any.whl  pytz-2018.9-py2.py3-none-any.whl  uvloop-0.11.3-cp37-cp37m-manylinux1_x86_64.whl
