[build-system]
requires = [
    # Essentials
    "setuptools >= 64",

    # Plugins
    "setuptools_scm[toml] >= 8",
    "setuptools_scm_git_archive >= 1.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "aiomysql"
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "aiomysql/_scm_version.py"
fallback_version = "0.2.1"
