[build-system]
requires = [
    "setuptools >= 64",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "aiomysql"
description = "MySQL driver for asyncio."
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nikolay Novik", email = "nickolainovik@gmail.com"},
]
keywords = ["mysql", "mariadb", "asyncio", "aiomysql"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX",
    "Environment :: Web Environment",
    "Development Status :: 3 - Alpha",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Framework :: AsyncIO",
]
dependencies = [
    "PyMySQL>=1.0",
]
version = "0.2.1"

[project.urls]
"Homepage" = "https://github.com/aio-libs/aiomysql"
"Download" = "https://pypi.python.org/pypi/aiomysql"
"CI: GitHub" = "https://github.com/aio-libs/aiomysql/actions"
"Docs: RTD" = "https://aiomysql.readthedocs.io/"
"GitHub: repo" = "https://github.com/aio-libs/aiomysql"
"GitHub: issues" = "https://github.com/aio-libs/aiomysql/issues"
"GitHub: discussions" = "https://github.com/aio-libs/aiomysql/discussions"

[project.optional-dependencies]
sa = ["sqlalchemy>=1.3,<1.4"]
rsa = ["PyMySQL[rsa]>=1.0"]

[tool.setuptools]
packages = ["aiomysql"]
include-package-data = true

# [tool.setuptools_scm]
# write_to = "aiomysql/_scm_version.py"
# fallback_version = "0.2.1"
