[metadata]
name = aiomysql
url = https://github.com/aio-libs/aiomysql
download_url = https://pypi.python.org/pypi/aiomysql
project_urls =
  CI: GitHub = https://github.com/aio-libs/aiomysql/actions
  Docs: RTD = https://aiomysql.readthedocs.io/
  GitHub: issues = https://github.com/aio-libs/aiomysql/issues
  GitHub: repo = https://github.com/aio-libs/aiomysql
description = MySQL driver for asyncio.
author = Nikolay Novik
author_email = nickolainovik@gmail.com
classifiers =
  License :: OSI Approved :: MIT License
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Operating System :: POSIX
  Environment :: Web Environment
  Development Status :: 3 - Alpha
  Topic :: Database
  Topic :: Database :: Front-Ends
  Framework :: AsyncIO
license = MIT
keywords =
  mysql
  mariadb
  asyncio
  aiomysql
platforms =
  POSIX

[options]
use_scm_version = True
python_requires = >=3.7
include_package_data = True

packages = find:

install_requires =
  PyMySQL>=1.0

[options.extras_require]
sa =
  sqlalchemy>=1.0,<1.4
rsa =
  PyMySQL[rsa]>=1.0

[options.packages.find]
exclude =
  tests
  tests.*
