[metadata]
name = aiomysql
version = attr: aiomysql.__version__
url = https://github.com/aio-libs/aiomysql
download_url = https://pypi.python.org/pypi/aiomysql
project_urls =
  CI: GitHub = https://github.com/aio-libs/aiomysql/actions
  Docs: RTD = https://aiomysql.readthedocs.io/
  GitHub: repo = https://github.com/aio-libs/aiomysql
  GitHub: issues = https://github.com/aio-libs/aiomysql/issues
  GitHub: discussions = https://github.com/aio-libs/aiomysql/discussions
description = MySQL driver for asyncio.
long_description = file: README.rst, CHANGES.txt
long_description_content_type = text/x-rst
author = Nikolay Novik
author_email = nickolainovik@gmail.com
classifiers =
  License :: OSI Approved :: MIT License
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Operating System :: POSIX
  Environment :: Web Environment
  Development Status :: 3 - Alpha
  Topic :: Database
  Topic :: Database :: Front-Ends
  Framework :: AsyncIO
license = MIT
keywords =
  mysql
  mariadb
  asyncio
  aiomysql
platforms =
  POSIX

[options]
python_requires = >=3.7
include_package_data = True

packages = find:

# runtime requirements
install_requires =
  PyMySQL>=1.0

[options.extras_require]
sa =
  sqlalchemy>=1.3,<1.4
rsa =
  PyMySQL[rsa]>=1.0

[options.packages.find]
exclude =
  tests
  tests.*
